# playblastOIIO-maya

./: .gitignore  CMakeLists.txt  README.md  plugin.map
include/: playblastOIIO.h
scripts/: playblastOIIO.py
src/: playblastOIIO.cpp  playblastOIIOMain.cpp
